--- a/haskell-github/project.cabal
+++ b/haskell-github/project.cabal
@@ -44,6 +44,7 @@ test-suite project-test
 
 benchmark project-bench
   import:         base
+  ghc-options:    -O2
   hs-source-dirs: bench
   main-is:        Main.hs
   type:           exitcode-stdio-1.0
